# Algorithms

./: .travis.yml  CMakeLists.txt  README.md  task_01.cpp  task_02.cpp
task_01/: CMakeLists.txt  main.cpp  main.hpp  sort.cpp  sorting.cpp  sorting.hpp  test.cpp
task_02/: task_02.cpp
task_03/: task_03.cpp
task_04/: main.cpp  main.hpp
task_05/: main.cpp
